--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="not_have_an_account_register">Not have an account? <b>Register</b></string>
     <string name="already">Already have an Account? <b>Login Now</b></string>
+    <string name="didn_t_receive_otp_resend">Didn\'t receive OTP? Resend</string>
 </resources>
